fix header link bug (./ to CDN)

--- a/index.html
+++ b/index.html
@@ -19,16 +19,26 @@
       crossorigin="anonymous"
     />
     <!-- leaflet -->
-    <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css" />
-    <script src="./node_modules/leaflet/dist/leaflet.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+      integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+      integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+      crossorigin=""
+    ></script>
     <!-- turf -->
     <script src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
     <!-- eazyButtom -->
     <link
       rel="stylesheet"
-      href="./node_modules/leaflet-easybutton/src/easy-button.css"
+      href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css"
     />
-    <script src="./node_modules/leaflet-easybutton/src/easy-button.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
+    <!-- my stylesheet -->
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
